[package]
name = "my_library"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_pcg = { version = "0.3", optional = true }
rand_xorshift = { version = "0.3", optional = true }
bevy = "0.12"
anyhow = "1"
bevy_egui = "0.23"

[features]
default = ["pcg"]
pcg = ["rand_pcg"]
xorshift = ["rand_xorshift"]
locking = []

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "random"
harness = false
